added new gallery items and background

--- a/index.html
+++ b/index.html
@@ -104,21 +104,11 @@
           <p>Anthony graduated with a Bachelor of Arts in Music for Voice from the University of Florida where he performed in multiple concerts and major works as well as a Voice Recital. During his time in University, and afterward, he was a member of multiple church choirs as a Cantor and choir member. In 2017 he moved to Kameoka (Kyoto Prefecture), Japan and married his lovely wife, Melissa. While he was in Japan he had many opportunities to share his talents and culture by performing and speaking at events at Galleria, Kameoka’s International Center, and around the city.</p>
 	        <p>After returning to Florida from Japan in 2019, Anthony decided to fully pursue an acting career. All the experience and confidence gained from moving to and living in a foreign country (without knowing how to communicate very well) inspired and motivated him to pursue his dreams wholeheartedly in his own country. In 2020 he, his wife, and cat, Tera moved to Dallas, Texas where they have been working full-time in Voice Over ever since.</p>
           <p>Anthony’s interests and hobbies include Japanese Culture, Singing, Herbalism, Opera, Health/Nutrition, Kpop, Video Games, and Cats. When he’s not “working” he enjoys directing, acting, and singing in fun projects as well as learning about wild plants.</p>
-          <button class="mt-3 btn btn-secondary">View Resume</button>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- <section id="resume" class="section">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <img src="img/resume.png" alt="">
-        </div>
-      </div>
-    </div>
-  </section> -->
 
   <section id="gallery" class="section">
     <div class="container">
@@ -131,8 +121,22 @@
             <div class="card-body">
               <h6>Intermittent Fasting All Time by Carolyn Whitesell</h6>
               <p><i class="fab fa-audible"></i> Audiobook</p>
+              <p>Non-fiction</p>
               <p class="card-text">Have you ever met a colleague or friend you have not seen in a long time and you have been speechless? Instantly, you ask “what have you done to yourself? You look radiant, you lost weight and your face is the very image of health!"</p>
-              <a class="btn btn-secondary" href="https://www.audible.com/pd/B088ZR6KZ4/?source_code=AUDFPWS0223189MWU-BK-ACX0-197268&ref=acx_bty_BK_ACX0_197268_pd_us">Read More...</a>
+              <a class="btn btn-secondary" target="_blank" href="https://www.audible.com/pd/B088ZR6KZ4/?source_code=AUDFPWS0223189MWU-BK-ACX0-197268&ref=acx_bty_BK_ACX0_197268_pd_us">View Project</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <img src="img/gallery/draw.jpg" alt="" class="w-100">
+            <div class="card-body">
+              <h6 class="card-title">How to Draw Cool Stuff: A Drawing Guide for Teachers and Students</h6>
+              <p><i class="fab fa-audible"></i> Audiobook</p>
+              <p>Non-fiction</p>
+              <p class="card-text">How to Draw Cool Stuff will guide you through the basic principles of illustration by concentrating on easy-to-learn shapes that build into complex drawings. With the step-by-step guidelines provided, anything can become easy to draw.</p>
+              <a class="btn btn-secondary" target="_blank" href="https://www.audible.com/pd/B08CL36SLD?source_code=AUDFPWS0223189MWU-BK-ACX0-203678&ref=acx_bty_BK_ACX0_203678_pd_us">View Project</a>
             </div>
           </div>
         </div>
@@ -143,8 +147,9 @@
             <div class="card-body">
               <h6 class="card-title">Keeper of Secrets by Mark A. Roeder</h6>
               <p><i class="fab fa-audible"></i> Audiobook</p>
+              <p>Fiction</p>
               <p class="card-text">Sixteen-year-old Avery is in trouble, yet again, but this time, he’s in over his head. On the run, Avery is faced with hardships and fear. He must become what he’s always despised to survive. He discovers new reasons to hate, until fate brings him to Graymoor Mansion, and he discovers a disturbing connection to the past.</p>
-              <a class="btn btn-secondary" href="https://www.audible.com/pd/B08BG4ZF64/?source_code=AUDFPWS0223189MWU-BK-ACX0-202068&ref=acx_bty_BK_ACX0_202068_pd_us">Read More...</a>
+              <a class="btn btn-secondary" target="_blank" href="https://www.audible.com/pd/B08BG4ZF64/?source_code=AUDFPWS0223189MWU-BK-ACX0-202068&ref=acx_bty_BK_ACX0_202068_pd_us">View Project</a>
             </div>
           </div>
         </div>
@@ -155,8 +160,8 @@
             <div class="card-body">
               <h6>Pokemon Nekoama Night of the Living Kids - Voice of Doduo and Zombified Pokemon</h6>
               <p><i class="fas fa-book-open"></i> Comic Dub</p>
-              <!-- <p class="card-text">Need description</p> -->
-              <a class="btn btn-secondary" href="https://www.youtube.com/watch?v=cUYxv52twvc">Read More...</a>
+              <p class="card-text">Squirtle, Charmander, and Wartortle end up in a Zombie Apocalypse?!</p>
+              <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=cUYxv52twvc">View Project</a>
             </div>
           </div>
         </div>
@@ -169,7 +174,7 @@
               <p><i class="fas fa-gamepad"></i> Video Game</p>
               <p class="card-text">Steventon Street is an otome dating sim in which you play as a woman who opens a bookstore in the fictional town of Peabody, Maryland. But nothing's ever simple for this Janeite, and she suddenly finds herself surrounded by new faces, as well as a few old ones.
 Each romantic storyline is a loose adaptation of one of Jane Austen's six novels.</p>
-              <a class="btn btn-secondary" href="https://peanutparade.itch.io/steventon-street">Read More...</a>
+              <a class="btn btn-secondary" target="_blank" href="https://peanutparade.itch.io/steventon-street">View Project</a>
             </div>
           </div>
         </div>
@@ -181,7 +186,7 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
               <h6>Solipsism Reigns - Voice of Nexus and The Architect</h6>
               <p><i class="fas fa-gamepad"></i> Video Game</p>
               <p class="card-text">Become a Student, Mage, Clan Leader, Detective, or Gamer as you discover more about your true destiny. Travel through various dimensions to seek the truth about yourself and the worlds around you. Your only constant will be your yandere spirit companion, Kuro. Your guardian spirit, Kuro, takes many forms...</p>
-              <a class="btn btn-secondary" href="https://melancholy-marionette.itch.io/solipsism-reigns">Read More...</a>
+              <a class="btn btn-secondary" target="_blank" href="https://melancholy-marionette.itch.io/solipsism-reigns">View Project</a>
             </div>
           </div>
         </div>
@@ -192,8 +197,8 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
             <div class="card-body">
               <h6>Anya’s Ghost - Voice of Sean</h6>
               <p><i class="fas fa-book-open"></i> Comic Dub</p>
-              <!-- <p class="card-text">Need description</p> -->
-              <a class="btn btn-secondary" href="https://www.youtube.com/watch?v=TCf6qY2LVFU">Read More...</a>
+              <p class="card-text">A girl from Russia trying to fit into American school life. Everything seems to be going wrong in her life, then she meets a mysterious and unlikely friend.</p>
+              <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=TCf6qY2LVFU">View Project</a>
             </div>
           </div>
         </div>
@@ -205,7 +210,7 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
               <h6>Mondrea Memories - Tavern Extras</h6>
               <p><i class="fas fa-file-audio"></i> Audio Drama</p>
               <p class="card-text">An immersive audio odyssey into dreamless domain. Decode and reclaim lost memory from chaotic sound. For fans of sci-fi, fantasy, mind-bending thrillers, tales of power and ancient wonder. The epic tale of the DreamersEcho Universe begins here. Explore the podcast, comics, music, and more at DreamersEcho.com.</p>
-              <a class="btn btn-secondary" href="https://anchor.fm/jetfalco">Read More...</a>
+              <a class="btn btn-secondary" target="_blank" href="https://anchor.fm/jetfalco">View Project</a>
             </div>
           </div>
         </div>
@@ -216,8 +221,8 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
             <div class="card-body">
               <h6>Angel Densetsu Comic Dub - Director and Voice of Seiichirou Kitano and Student Extra </h6>
               <p><i class="fas fa-male"></i> Directing</p>
-              <!-- <p class="card-text">Neei</p> -->
-              <a class="btn btn-secondary" href="https://www.youtube.com/watch?v=GoG8F9mcfsU&start=0s">Read More...</a>
+              <p class="card-text">A pure-hearted and kind boy with a scary looking face who ends up in precarious situations due to misunderstandings. A comedy about high school life in Japan and how looks can be deceiving.</p>
+              <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=GoG8F9mcfsU&start=0s">View Project</a>
             </div>
           </div>
         </div>
@@ -228,9 +233,12 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
 
   <section id="contact" class="section">
     <div class="container">
-      <div class="row">
-        <div class="col-12">
+      <div class="row mb-3">
+        <div class="col-12 text-center">
           <h2 class="text-center">Contact</h2>
+          <!-- <a target="_blank" href="https://docs.google.com/document/d/1V1EU1_Rl5bIQxjSSMGPekVtKlvcGx5I_skIvRIGDyPQ/edit"><img class="port-thumb" width="200" src="img/resume-thumb.jpg" alt=""></a> -->
+          <img class="rounded-circle d-block mx-auto mb-3" src="img/headshot2-sm.jpg" alt="">
+          <a target="_blank" class="mt-2 text-light" href="https://docs.google.com/document/d/1V1EU1_Rl5bIQxjSSMGPekVtKlvcGx5I_skIvRIGDyPQ">View Resume</a>
         </div>
       </div>
       <div class="row">
@@ -248,8 +256,17 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
               <label for="message">Message</label>
               <textarea class="form-control" id="message" rows="3"></textarea>
             </div>
-            <button class="btn btn-primary d-block mx-auto" type="submit">Send</button>
+            <button class="btn btn-primary d-block mx-auto mb-3" type="submit">Send</button>
           </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="social-media text-center">
+            <a class="yt" target="_blank" href="https://www.youtube.com/channel/UCbbN5SIUTg1IpfhRgBGB4tQ"><i class="fab fa-youtube"></i></a>
+            <a class="tw" target="_blank" href="https://twitter.com/cryshulvo"><i class="fab fa-twitter"></i></a>
+            <a class="voices" target="_blank" href="https://www.voices.com/actors/AnthonyRodriguez"><img class="voices-icon" src="img/voices.png" alt=""></a>
+          </div>
         </div>
       </div>
     </div>
