--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">Gallery</a>
+              <a class="nav-link" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -238,7 +238,7 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
           <h2 class="text-center">Contact</h2>
           <!-- <a target="_blank" href="https://docs.google.com/document/d/1V1EU1_Rl5bIQxjSSMGPekVtKlvcGx5I_skIvRIGDyPQ/edit"><img class="port-thumb" width="200" src="img/resume-thumb.jpg" alt=""></a> -->
           <img class="rounded-circle d-block mx-auto mb-3" src="img/headshot2-sm.jpg" alt="">
-          <a target="_blank" class="mt-2 text-light" href="https://docs.google.com/document/d/1V1EU1_Rl5bIQxjSSMGPekVtKlvcGx5I_skIvRIGDyPQ">View Resume</a>
+          <a target="_blank" class="mt-2 text-light view-resume" href="https://docs.google.com/document/d/1V1EU1_Rl5bIQxjSSMGPekVtKlvcGx5I_skIvRIGDyPQ">View Resume</a>
         </div>
       </div>
       <div class="row">
