restyle and bg updates

--- a/index.html
+++ b/index.html
@@ -233,23 +233,22 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
 
   <section id="contact" class="section">
     <div class="container">
+
       <div class="row mb-3">
-        <div class="col-12 text-center">
-          <h2 class="text-center">Contact</h2>
-          <!-- <a target="_blank" href="https://docs.google.com/document/d/1V1EU1_Rl5bIQxjSSMGPekVtKlvcGx5I_skIvRIGDyPQ/edit"><img class="port-thumb" width="200" src="img/resume-thumb.jpg" alt=""></a> -->
-          <img class="rounded-circle d-block mx-auto mb-3" src="img/headshot2-sm.jpg" alt="">
-          <a target="_blank" class="mt-2 text-light view-resume" href="https://docs.google.com/document/d/1V1EU1_Rl5bIQxjSSMGPekVtKlvcGx5I_skIvRIGDyPQ">View Resume</a>
+        <div class="col-12">
+          <h2 class="text-center">Contact Anthony</h2>
+          <img class="rounded-circle d-block mx-auto mb-5" src="img/headshot2-sm.jpg" alt="">
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 mx-auto">
+
+        <div class="col-md-10 col-lg-6 mx-auto">
           <form action="">
+            <h4 class="text-center">Send a message</h4>
             <div class="form-group">
               <label for="name">Name</label>
               <input type="name" class="form-control" id="name">
             </div>
             <div class="form-group">
-              <label for="email">Email</label>
+              <label for="email">E-mail</label>
               <input type="email" class="form-control" id="email">
             </div>
             <div class="form-group">
@@ -258,6 +257,15 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
             </div>
             <button class="btn btn-primary d-block mx-auto mb-3" type="submit">Send</button>
           </form>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 text-center mt-4 mb-4">
+          <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume.pdf">
+            <img class="port-thumb" src="img/resume-thumb.jpg" alt=""><br>
+            View Resume
+          </a>
         </div>
       </div>
       <div class="row">
