added demo reels

--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
         </div>
         <div class="row">
           <div class="col-sm-6 col-md-3">
-            <button class="btn btn-primary">
+            <a target="_blank" href="files/animation.mp3" class="btn btn-primary">
               Animation
               <i class="far fa-play-circle"></i>
-            </button>
+            </a>
           </div>
           <div class="col-sm-6 col-md-3">
-            <button class="btn btn-primary">
+            <a target="_blank" href="files/commercial.mp3" class="btn btn-primary">
               Commercial
               <i class="far fa-play-circle"></i>
-            </button>
+            </a>
           </div>
           <div class="col-sm-6 col-md-3">
-            <button class="btn btn-primary">
+            <a target="_blank" href="files/character.mp3" class="btn btn-primary">
               Character
               <i class="far fa-play-circle"></i>
-            </button>
+            </a>
           </div>
           <div class="col-sm-6 col-md-3">
-            <button class="btn btn-primary">
+            <a target="_blank" href="files/audiobook.mp3" class="btn btn-primary">
               Audiobook
               <i class="far fa-play-circle"></i>
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
             <div class="card-body">
               <h6 class="card-title">Keeper of Secrets by Mark A. Roeder</h6>
               <p><i class="fab fa-audible"></i> Audiobook</p>
-              <p>Fiction</p>
+              <p>Fiction (Mature themes)</p>
               <p class="card-text">Sixteen-year-old Avery is in trouble, yet again, but this time, he’s in over his head. On the run, Avery is faced with hardships and fear. He must become what he’s always despised to survive. He discovers new reasons to hate, until fate brings him to Graymoor Mansion, and he discovers a disturbing connection to the past.</p>
               <a class="btn btn-secondary" target="_blank" href="https://www.audible.com/pd/B08BG4ZF64/?source_code=AUDFPWS0223189MWU-BK-ACX0-202068&ref=acx_bty_BK_ACX0_202068_pd_us">View Project</a>
             </div>
