--- a/index.html
+++ b/index.html
@@ -241,21 +241,21 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
         </div>
 
         <div class="col-md-10 col-lg-6 mx-auto">
-          <form action="">
+          <form action="https://formspree.io/xzbjjnld" method="POST">
             <h4 class="text-center">Send a message</h4>
             <div class="form-group">
               <label for="name">Name</label>
-              <input type="name" class="form-control" id="name">
+              <input type="name" class="form-control" id="name" name="Name" required>
             </div>
             <div class="form-group">
               <label for="email">E-mail</label>
-              <input type="email" class="form-control" id="email">
+              <input type="email" class="form-control" id="email" name="Email" required>
             </div>
             <div class="form-group">
               <label for="message">Message</label>
-              <textarea class="form-control" id="message" rows="3"></textarea>
+              <textarea class="form-control" id="message" rows="3" name="Message" required></textarea>
             </div>
-            <button class="btn btn-primary d-block mx-auto mb-3" type="submit">Send</button>
+            <button class="btn btn-secondary d-block mx-auto mb-3" type="submit" value="Send">Send</button>
           </form>
         </div>
       </div>
