removed how to draw from gallery

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-lg-4 mb-4">
+        <!-- <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
             <img src="img/gallery/draw.jpg" alt="" class="w-100">
             <div class="card-body">
@@ -139,7 +139,7 @@
               <a class="btn btn-secondary" target="_blank" href="https://www.audible.com/pd/B08CL36SLD?source_code=AUDFPWS0223189MWU-BK-ACX0-203678&ref=acx_bty_BK_ACX0_203678_pd_us">View Project</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
