remove old imgs, link thumbnails to products

--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="w-100" src="img/gallery/audiobook_fasting.jpg" alt="">
+            <a target="_blank" href="https://www.audible.com/pd/B088ZR6KZ4/?source_code=AUDFPWS0223189MWU-BK-ACX0-197268&ref=acx_bty_BK_ACX0_197268_pd_us">
+              <img class="w-100" src="img/gallery/audiobook_fasting.jpg" alt="">
+            </a>
             <div class="card-body">
               <h6>Intermittent Fasting All Time by Carolyn Whitesell</h6>
               <p><i class="fab fa-audible"></i> Audiobook</p>
@@ -128,22 +130,11 @@
           </div>
         </div>
 
-        <!-- <div class="col-md-6 col-lg-4 mb-4">
-          <div class="card">
-            <img src="img/gallery/draw.jpg" alt="" class="w-100">
-            <div class="card-body">
-              <h6 class="card-title">How to Draw Cool Stuff: A Drawing Guide for Teachers and Students</h6>
-              <p><i class="fab fa-audible"></i> Audiobook</p>
-              <p>Non-fiction</p>
-              <p class="card-text">How to Draw Cool Stuff will guide you through the basic principles of illustration by concentrating on easy-to-learn shapes that build into complex drawings. With the step-by-step guidelines provided, anything can become easy to draw.</p>
-              <a class="btn btn-secondary" target="_blank" href="https://www.audible.com/pd/B08CL36SLD?source_code=AUDFPWS0223189MWU-BK-ACX0-203678&ref=acx_bty_BK_ACX0_203678_pd_us">View Project</a>
-            </div>
-          </div>
-        </div> -->
-
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img src="img/gallery/keeper_of_secrets.jpg" alt="" class="w-100">
+            <a target="_blank" href="https://www.audible.com/pd/B08BG4ZF64/?source_code=AUDFPWS0223189MWU-BK-ACX0-202068&ref=acx_bty_BK_ACX0_202068_pd_us">
+              <img src="img/gallery/keeper_of_secrets.jpg" alt="" class="w-100">
+            </a>
             <div class="card-body">
               <h6 class="card-title">Keeper of Secrets by Mark A. Roeder</h6>
               <p><i class="fab fa-audible"></i> Audiobook</p>
@@ -156,7 +147,9 @@
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="w-100" src="img/gallery/kekoama.jpg" alt="">
+            <a target="_blank" href="https://www.youtube.com/watch?v=cUYxv52twvc">
+              <img class="w-100" src="img/gallery/kekoama.jpg" alt="">
+            </a>
             <div class="card-body">
               <h6>Pokemon Nekoama Night of the Living Kids - Voice of Doduo and Zombified Pokemon</h6>
               <p><i class="fas fa-book-open"></i> Comic Dub</p>
@@ -168,7 +161,9 @@
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="w-100" src="img/gallery/steventonstreet.png" alt="">
+            <a target="_blank" href="https://peanutparade.itch.io/steventon-street">
+              <img class="w-100" src="img/gallery/steventonstreet.png" alt="">
+            </a>
             <div class="card-body">
               <h6>Steventon Street Demo - Voice of Will Drake</h6>
               <p><i class="fas fa-gamepad"></i> Video Game</p>
@@ -181,7 +176,9 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="w-100" src="img/gallery/reigns.png" alt="">
+            <a target="_blank" href="https://melancholy-marionette.itch.io/solipsism-reigns">
+              <img class="w-100" src="img/gallery/reigns.png" alt="">
+            </a>
             <div class="card-body">
               <h6>Solipsism Reigns - Voice of Nexus and The Architect</h6>
               <p><i class="fas fa-gamepad"></i> Video Game</p>
@@ -193,7 +190,9 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="w-100" src="img/gallery/anya.jpg" alt="">
+            <a target="_blank" href="https://www.youtube.com/watch?v=TCf6qY2LVFU">
+              <img class="w-100" src="img/gallery/anya.jpg" alt="">
+            </a>
             <div class="card-body">
               <h6>Anya’s Ghost - Voice of Sean</h6>
               <p><i class="fas fa-book-open"></i> Comic Dub</p>
@@ -205,7 +204,9 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="w-100" src="img/gallery/mondrea.jpg" alt="">
+            <a target="_blank" href="https://anchor.fm/jetfalco">
+              <img class="w-100" src="img/gallery/mondrea.jpg" alt="">
+            </a>
             <div class="card-body">
               <h6>Mondrea Memories - Tavern Extras</h6>
               <p><i class="fas fa-file-audio"></i> Audio Drama</p>
@@ -217,7 +218,9 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <img class="w-100" src="img/gallery/densetsu.jpg" alt="">
+            <a target="_blank" href="https://www.youtube.com/watch?v=GoG8F9mcfsU&start=0s">
+              <img class="w-100" src="img/gallery/densetsu.jpg" alt="">
+            </a>
             <div class="card-body">
               <h6>Angel Densetsu Comic Dub - Director and Voice of Seiichirou Kitano and Student Extra </h6>
               <p><i class="fas fa-male"></i> Directing</p>
