removed unused imgs

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
       <div class="row mb-3">
         <div class="col-12">
           <h2 class="text-center">Contact Anthony</h2>
-          <img class="rounded-circle d-block mx-auto mb-5" src="img/headshot2-sm.jpg" alt="">
+          <img class="rounded-circle d-block mx-auto mb-5" src="img/headshot2.jpg" alt="">
         </div>
 
         <div class="col-md-10 col-lg-6 mx-auto">
