--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-6">
             <a target="_blank" href="files/animation.mp3" class="btn btn-primary">
               Animation
               <i class="far fa-play-circle"></i>
             </a>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-6">
             <a target="_blank" href="files/commercial.mp3" class="btn btn-primary">
               Commercial
               <i class="far fa-play-circle"></i>
             </a>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <!-- <div class="col-sm-6 col-md-3">
             <a target="_blank" href="files/character.mp3" class="btn btn-primary">
               Character
               <i class="far fa-play-circle"></i>
@@ -85,7 +85,7 @@
               Audiobook
               <i class="far fa-play-circle"></i>
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
