removed nekoama, anyas ghost, angel densetsu. added phantom world

--- a/index.html
+++ b/index.html
@@ -147,6 +147,21 @@
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
+            <a target="_blank" href="https://www.audible.com/pd/B08FWTTBQT/?source_code=AUDFPWS0223189MWU-BK-ACX0-211462">
+              <img src="img/gallery/phantom.jpg" alt="" class="w-100">
+            </a>
+            <div class="card-body">
+              <h6 class="card-title">Phantom World by Mark A. Roeder</h6>
+              <p><i class="fab fa-audible"></i> Audiobook</p>
+              <p>Fiction (Mature themes)</p>
+              <p class="card-text">Toby Riester is 16, gay, and searching for his first boyfriend. He discovers many potential candidates - Orlando, a cute 16-year-old Hispanic boy who works with Toby at the Phantom World amusement park; CT, a blond 17-year-old who is obviously gay; and Spike, a well-built 16-year-old from the internet.</p>
+              <a class="btn btn-secondary" target="_blank" href="https://www.audible.com/pd/B08FWTTBQT/?source_code=AUDFPWS0223189MWU-BK-ACX0-211462">View Project</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card">
             <a target="_blank" href="https://www.youtube.com/watch?v=cUYxv52twvc">
               <img class="w-100" src="img/gallery/kekoama.jpg" alt="">
             </a>
@@ -157,7 +172,7 @@
               <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=cUYxv52twvc">View Project</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
@@ -188,7 +203,7 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
           </div>
         </div>
 
-        <div class="col-md-6 col-lg-4 mb-4">
+        <!-- <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
             <a target="_blank" href="https://www.youtube.com/watch?v=TCf6qY2LVFU">
               <img class="w-100" src="img/gallery/anya.jpg" alt="">
@@ -200,7 +215,7 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
               <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=TCf6qY2LVFU">View Project</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
@@ -216,7 +231,7 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
           </div>
         </div>
 
-        <div class="col-md-6 col-lg-4 mb-4">
+        <!-- <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
             <a target="_blank" href="https://www.youtube.com/watch?v=GoG8F9mcfsU&start=0s">
               <img class="w-100" src="img/gallery/densetsu.jpg" alt="">
@@ -228,7 +243,7 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
               <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=GoG8F9mcfsU&start=0s">View Project</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
