updated demo reels and removed voice.com link

--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-md-4">
             <a target="_blank" href="files/animation.mp3" class="btn btn-primary">
               Animation
               <i class="far fa-play-circle"></i>
             </a>
           </div>
-          <div class="col-sm-6">
+          <div class="col-md-4">
             <a target="_blank" href="files/commercial.mp3" class="btn btn-primary">
               Commercial
               <i class="far fa-play-circle"></i>
             </a>
           </div>
-          <!-- <div class="col-sm-6 col-md-3">
+          <div class="col-md-4">
             <a target="_blank" href="files/character.mp3" class="btn btn-primary">
               Character
               <i class="far fa-play-circle"></i>
             </a>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <!-- <div class="col-sm-6 col-md-3">
             <a target="_blank" href="files/audiobook.mp3" class="btn btn-primary">
               Audiobook
               <i class="far fa-play-circle"></i>
@@ -291,7 +291,7 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
           <div class="social-media text-center">
             <a class="yt" target="_blank" href="https://www.youtube.com/channel/UCbbN5SIUTg1IpfhRgBGB4tQ"><i class="fab fa-youtube"></i></a>
             <a class="tw" target="_blank" href="https://twitter.com/cryshulvo"><i class="fab fa-twitter"></i></a>
-            <a class="voices" target="_blank" href="https://www.voices.com/actors/AnthonyRodriguez"><img class="voices-icon" src="img/voices.png" alt=""></a>
+            <!-- <a class="voices" target="_blank" href="https://www.voices.com/actors/AnthonyRodriguez"><img class="voices-icon" src="img/voices.png" alt=""></a> -->
           </div>
         </div>
       </div>
