added demo reel and gallery project

--- a/index.html
+++ b/index.html
@@ -68,15 +68,21 @@
               <i class="far fa-play-circle"></i>
             </a>
           </div> -->
-          <div class="col-md-6">
+          <div class="col-md-4">
             <a target="_blank" href="files/commercial.mp3" class="btn btn-primary">
               Commercial
               <i class="far fa-play-circle"></i>
             </a>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <a target="_blank" href="files/character.mp3" class="btn btn-primary">
               Character
+              <i class="far fa-play-circle"></i>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a target="_blank" href="files/videogame.mp3" class="btn btn-primary">
+              Video Game
               <i class="far fa-play-circle"></i>
             </a>
           </div>
@@ -231,19 +237,19 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
           </div>
         </div>
 
-        <!-- <div class="col-md-6 col-lg-4 mb-4">
+        <div class="col-md-6 col-lg-4 mb-4">
           <div class="card">
-            <a target="_blank" href="https://www.youtube.com/watch?v=GoG8F9mcfsU&start=0s">
-              <img class="w-100" src="img/gallery/densetsu.jpg" alt="">
+            <a target="_blank" href="https://www.youtube.com/watch?v=s8Qu-j-Zryw">
+              <img class="w-100" src="img/gallery/cursed_princess.jpg" alt="">
             </a>
             <div class="card-body">
-              <h6>Angel Densetsu Comic Dub - Director and Voice of Seiichirou Kitano and Student Extra </h6>
-              <p><i class="fas fa-male"></i> Directing</p>
-              <p class="card-text">A pure-hearted and kind boy with a scary looking face who ends up in precarious situations due to misunderstandings. A comedy about high school life in Japan and how looks can be deceiving.</p>
-              <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=GoG8F9mcfsU&start=0s">View Project</a>
+              <h6>Cursed Princess Club Webtoon Dub - Prince “Jamie” James </h6>
+              <p><i class="fas fa-male"></i> Comic Dubs</p>
+              <p class="card-text">Meet Gwendolyn – living proof that princesses don’t always have it all. See, although she lives in a castle and her father is the King, Gwendolyn isn’t like a movie princess, or even a fairly-tale princess. She’s got a big heart, but isn’t particularly attractive and doesn’t have a Disney-quality singing voice. But one night, she accidentally stumbles upon the twisted world of the Cursed Princess Club, and her life will never be the same. </p>
+              <a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/watch?v=s8Qu-j-Zryw">View Project</a>
             </div>
           </div>
-        </div> -->
+        </div>
 
       </div>
     </div>
