--- a/index.html
+++ b/index.html
@@ -97,6 +97,160 @@
     </section>
   </header>
 
+  <section id="resume" class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 mt-4 mb-4">
+          <h2 class="text-center">Resume</h2>
+
+          <div class="resume-wrap">
+            <h3 class="text-center">Anthony Jose Rodriguez</h3>
+            <h5>Theatre</h5>
+            <div class="row">
+              <div class="col-lg-6">
+                <ul class="m-0">
+                  <li>Lost in Yonkers</li>
+                  <li>Jay Kurnitz</li>
+                  <li>You&rsquo;re A Good Man, Charlie Brown</li>
+                  <li>Linus Van Pelt</li>
+                  <li>Friends Forever</li>
+                  <li>Johnny</li>
+                  <li>Arsenic and Old Lace</li>
+                  <li>Mortimer Brewster</li>
+                  <li>It&rsquo;s a Wonderful Life</li>
+                  <li>Stage Crew/Extra</li>
+                  <li>The Music Man</li>
+                  <li>Professor Harold Hill</li>
+                  <li>The Magic Flute</li>
+                  <li>Tech Crew</li>
+                </ul>
+              </div>
+            </div>
+
+            <h5>Film</h5>
+            <div class="row">
+              <div class="col-12">
+                <ul class="m-0">
+                  <li>This Man’s Life directed by Todd Thompson</li>
+                  <li>Train Station Patron</li>
+                </ul>
+              </div>
+            </div>
+
+            <h5>Church and Community</h5>
+            <div class="row">
+              <div class="col-12">
+                <ul class="m-0">
+                  <li>St. Augustine Catholic Church - <em>Soloist/Cantor</em></li>
+                  <li>Holy Faith Catholic Church - <em>Cantor</em></li>
+                  <li>Bach Festival Choir - <em>Choir Member</em></li>
+                  <li>All Saints Episcopal Church - <em>Cantor</em></li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="table-wrap">
+              <table class="voice-over-table">
+                <thead>
+                  <tr>
+                    <th colspan="3"><h5>Voice Over</h5></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td><h6>Title</h6></td>
+                    <td><h6>Character</h6></td>
+                    <td><h6>Client</h6></td>
+                  </tr>
+                  <tr>
+                    <td>Intermittent Fasting: All Time</td>
+                    <td>Narrator</td>
+                    <td>Carolyn Whitesell</td>
+                  </tr>
+                  <tr>
+                    <td>Steventon Street</td>
+                    <td>Will Drake</td>
+                    <td>PeanutParade</td>
+                  </tr>
+                  <tr>
+                    <td>Solipsism Reigns</td>
+                    <td>Nexus/The Architect</td>
+                    <td>Melancholy Marionette</td>
+                  </tr>
+                  <tr>
+                    <td>Keeper of Secrets</td>
+                    <td>Narrator</td>
+                    <td>Mark A. Roeder</td>
+                  </tr>
+                  <tr>
+                    <td>Phantom World</td>
+                    <td>Narrator</td>
+                    <td>Mark A. Roeder</td>
+                  </tr>
+                  <tr>
+                    <td>The Cursed Princess Club</td>
+                    <td>Prince James/Additional Voices</td>
+                    <td>Miraculous Cora Zone</td>
+                  </tr>
+                  <tr>
+                    <td>Mondrea Memories </td>
+                    <td>Additional Voices </td>
+                    <td>DreamersEcho</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+            <div class="row">
+              <div class="col-12">
+                <h5>Equipment:</h5>
+                <ul>
+                  <li>Audio Technica AT2020</li>
+                  <li>Audient ID4</li>
+                  <li>Adobe Audition</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-12">
+                <h5>Education:</h5>
+                <ul class="m-0">
+                  <li>Bachelor of Arts in Music from University of Florida</li>
+                  <li>Online Voice Over Classes with Bill DeWees</li>
+                  <li>Voice Over Study with Josh Martin</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-12">
+                <h5>Skills:</h5>
+                <ul class="m-0">
+                  <li>Teenage Male Voices</li>
+                  <li>Character Voices</li>
+                  <li>Singing in French, German, Spanish, Latin, Japanese, Italian</li>
+                  <li>Young Adult Male Voices</li>
+                  <li>Creature Voices</li>
+                  <li>French/Japanese Accent</li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="text-center">
+            <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume.pdf">
+              <img class="port-thumb" src="img/resume-thumb.jpg" alt=""><br>
+              Download Resume
+            </a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="about" class="section">
     <div class="container-fluid">
       <div class="row">
@@ -284,14 +438,6 @@ Each romantic storyline is a loose adaptation of one of Jane Austen's six novels
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-12 text-center mt-4 mb-4">
-          <a target="_blank" class="mt-2 text-dark view-resume" href="files/resume.pdf">
-            <img class="port-thumb" src="img/resume-thumb.jpg" alt=""><br>
-            View Resume
-          </a>
-        </div>
-      </div>
       <div class="row">
         <div class="col-12">
           <div class="social-media text-center">
