edited theatre section of resume

--- a/index.html
+++ b/index.html
@@ -109,20 +109,13 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul class="m-0">
-                  <li>Lost in Yonkers</li>
-                  <li>Jay Kurnitz</li>
-                  <li>You&rsquo;re A Good Man, Charlie Brown</li>
-                  <li>Linus Van Pelt</li>
-                  <li>Friends Forever</li>
-                  <li>Johnny</li>
-                  <li>Arsenic and Old Lace</li>
-                  <li>Mortimer Brewster</li>
-                  <li>It&rsquo;s a Wonderful Life</li>
-                  <li>Stage Crew/Extra</li>
-                  <li>The Music Man</li>
-                  <li>Professor Harold Hill</li>
-                  <li>The Magic Flute</li>
-                  <li>Tech Crew</li>
+                  <li>Lost in Yonkers - <em>Jay Kurnitz</em></li>
+                  <li>You&rsquo;re A Good Man, Charlie Brown - <em>Linus Van Pelt</em></li>
+                  <li>Friends Forever - <em>Johnny</em></li>
+                  <li>Arsenic and Old Lace - <em>Mortimer Brewster</em></li>
+                  <li>It&rsquo;s a Wonderful Life - <em>Stage Crew/Extra</em></li>
+                  <li>The Music Man - <em>Professor Harold Hill</em></li>
+                  <li>The Magic Flute - <em>Tech Crew</em></li>
                 </ul>
               </div>
             </div>
